kubernetes/firstdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstdeploy
  labels:
    name: firstdeploy
spec:
  replicas: 10
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
        - name: firstdeploycontainer
          image: nginx
