kubernetes/seconddeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seconddeploy
  labels:
    name: seconddeploy
  annotations:
    kubernetes.io/change-cause: "my custom message"
spec:
  replicas: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: tigercontainer
          image: sudsunny/tiger1:v1
        - name: rediscontainer
          image: redis
