kubernetes/secondeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seconddeploy
  labels:
    name: seconddeploy
  annotations:
    kubernetes.io/change-cause: "my custom message"
spec:
  replicas: 10
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: sudsunny/tiger2:v2
