kubernetes/lbhttpd.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancerhttpd
spec:
  type: LoadBalancer
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 8080
