kubernetes/nodeportservice.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeportservice
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32000
