kubernetes/nodeportservice1.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeportservice1
  labels:
    app: myapp1
spec:
  type: NodePort
  selector:
    app: myapp1
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32500
